--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "app.py" },
-    { "src": "/(.*)", "dest": "index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
-
